--- a/styles/style.css
+++ b/styles/style.css
@@ -54,3 +54,80 @@ body{
     border: none;
 }
 /* banner section style ends here */
+
+/* second section styles stars from here */
+.main-section-container{
+    width: 946px;
+    height: 1235px;
+    border: 20px solid whitesmoke;
+    margin: 0 auto;
+    margin-top: 120px;
+}
+.second-section-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 40px solid whitesmoke;
+    background-color: whitesmoke;
+}
+.second-section-title{
+    font-size: 34px;
+    margin-top: 15px;
+}
+.second-section-description{
+    font-size: 11px;
+    margin: 20px;
+    opacity: 0.7;
+    text-align: center;
+}
+.layer1-container{
+    width: 907px;
+    height: 240px;
+    margin: 0 auto;
+    display: flex;
+    border-bottom: 25px solid whitesmoke;
+}
+.layer1-leftside-content{
+    width: 50%;
+    height: 240px;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    padding: 30px;
+    margin-left: 0;
+}
+.layer1-leftside-content-title{
+    font-size: 18px;
+    font-weight: 700;
+    color: rgba(13, 19, 33, 0.7);
+}
+.layer1-leftside-content-description{
+    font-size: 10px;
+    font-weight: 400;
+    opacity: 0.8;
+    color: rgb(13, 19, 33);
+    margin-top: 15px;
+}
+.btn-secondary{
+    border: 1px solid black;
+    font-weight: 600;
+    font-size: 12px;
+    width: 120px;
+    height: 40px;
+    background-color:white;
+    padding: 5px;
+    margin-top: 15px;
+}
+.layer1-rightside-content{
+    width: 50%;
+    height: 240px;    
+}
+.layer1-img{
+    width: 259px;
+    height: 217px;
+}
+
+/* layer-2 styles starts from here */
+
+
