--- a/styles/style.css
+++ b/styles/style.css
@@ -241,6 +241,54 @@ body{
 }
 /* third section ends here */
 
+/* skills section starts here */
+.skills{
+    width: 852px;
+    height: 70px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.skills-section-title{
+    font-size: 23px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.skills-section-description{
+    font-size: 10px;
+    opacity: 0.7;
+    font-weight: 400;
+    text-align: center;
+}
+.skills-container{
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    margin-top: 20px;
+    justify-content: center;
+    margin-left: 10px;
+}
+.skill{
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    font-size: 10px;
+    opacity: 0.7;
+}
+.color-1{
+    background-color: rgba(242, 151, 90, 0.356)
+}
+.color-2{
+    background-color: rgba(115, 115, 247, 0.144);
+}
+.color-3{
+    background-color: rgba(246, 246, 104, 0.332);
+}
+
+
+/* skills section ends here */
 
 
 
