--- a/styles/style.css
+++ b/styles/style.css
@@ -264,13 +264,12 @@ body{
     display: flex;
     gap: 25px;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 35px;
     justify-content: center;
-    margin-left: 10px;
 }
 .skill{
     padding: 25px;
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 .skill-description{
@@ -290,5 +289,55 @@ body{
 
 /* skills section ends here */
 
+/* support section starts here */
+.support-section{
+    max-width: 1440px;
+    height: 300px;
+    margin-top: 40px;
+    padding: 40px;
+    border-radius: 20px;
+    background-image: url('../assets/handshake.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.support-section-title{
+    font-size: 23px;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 10px;
+    color: white;
+}
+.support-section-description{
+    font-size: 12px;
+    font-weight: 400;
+    opacity: 0.8;
+    text-align: center;
+    margin-top: 10px;
+    color: white;
+}
+.text-box{
+    width: 500px;
+    height: 40px;
+    border-radius: 8px;
+    font-size: 13px;
+    font-weight: 600;
+}
+.submit-box{
+    width: 100px;
+    height: 40px;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 13px;
+}
+.box-container{
+    display: flex;
+    padding: 40px;
+    gap: 20px;
+    margin: 15px;
+}
 
+/* support section ends here */
+
+/* footer section starts here */
 
