Added footer section

--- a/styles/style.css
+++ b/styles/style.css
@@ -340,4 +340,17 @@ body{
 /* support section ends here */
 
 /* footer section starts here */
+.footer-container{
+    min-width: 500px;
+    height: 90px;
+    padding: 32px 50px;
+    margin-top: 20px;
+    border-radius: 20px;
+    background-color: rgba(211, 211, 211, 0.455);
+}
+.footer-section{
+    display: flex;
+    justify-content: space-between;
+}
+/* footer section ends here */
 
