Modity Learn More

--- a/styles/style.css
+++ b/styles/style.css
@@ -285,6 +285,9 @@ body{
 .color-3{
     background-color: rgba(246, 246, 104, 0.332);
 }
+.link{
+    color: black;
+}
 
 
 /* skills section ends here */
